--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<p>hi</p>
-<router-outlet></router-outlet>
+<ng-container>
+  <div>
+    <button mat-flat-button routerLink="/notice">Notice</button>
+    <button class="btn btn-primary">Click me!</button>
+  </div>
+  <router-outlet></router-outlet>
+</ng-container>
