knowledge-base module improvements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ng-container>
   <div>
     <button mat-flat-button routerLink="/notice">Notice</button>
-    <button class="btn btn-primary">Click me!</button>
+    <button mat-flat-button routerLink="/knowledge-base">knowledge-base</button>
   </div>
   <router-outlet></router-outlet>
 </ng-container>
