--- a/src/app/modules/k-base/create-article/create-article.component.html
+++ b/src/app/modules/k-base/create-article/create-article.component.html
@@ -1,4 +1,3 @@
-
 <div class="container">
   <div class="row py-3">
     <div class="col-12 col-md-8 mb-3">
@@ -6,28 +5,27 @@
         <mat-card-title-group>
           <mat-card-title
             mat-dialog-title
-            class="d-flex align-items-center mb-1"
+            class="d=flex align-items-center mb-1"
           >
-            <span
-              style="font-size: 20px; align-items: center; display: flex"
-            >
-              <mat-icon
-                class="heading-icon mr-2"
+            <span style="font-size: 20px; align-items: center; display: flex">
+              <span
+                class="material-icons"
                 style="font-size: 30px; margin-bottom: 0.4rem"
-                >newspaper</mat-icon
               >
-              &nbsp; Create Notice
+                article
+              </span>
+              &nbsp; Create Article
             </span>
           </mat-card-title>
-          <mat-card-subtitle style="margin-left: 0.1rem">
-             create a notice from here </mat-card-subtitle>
+          <mat-card-subtitle style="margin-left: 0.1rem;">
+            Create a article from here
+          </mat-card-subtitle>
         </mat-card-title-group>
 
-        <mat-divider></mat-divider>
+        <mat-divider> </mat-divider>
 
         <mat-card-content class="pt-4">
-          <form [formGroup]="noticeFormGroup">
-
+          <form [formGroup]="articleFormGroup">
             <div class="row">
               <div class="col">
                 <mat-form-field
@@ -75,8 +73,8 @@
 
 
           </form>
-        </mat-card-content>
 
+        </mat-card-content>
         <mat-card-actions>
           <div class="d-flex justify-content-end">
             <button
@@ -84,15 +82,14 @@
               class="m-2"
               mat-raised-button
               color="primary"
-              [disabled]="noticeFormGroup.invalid || (noticeFormGroup.pristine)"
+              [disabled]="articleFormGroup.invalid || (articleFormGroup.pristine)"
             >
              Save
             </button>
           </div>
+
         </mat-card-actions>
       </mat-card>
     </div>
   </div>
 </div>
-
-
