create view article component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
   <div>
     <button mat-flat-button (click)="addNotice()" >Add Notice</button>
     <button mat-flat-button (click)="viewNotice()">View Notice</button>
-    <button mat-flat-button routerLink="/knowledge-base">knowledge-base</button>
+    <button mat-flat-button (click)="addArticle()">Add Article</button>
+    <button mat-flat-button (click)="viewArticle()">View Article</button>
   </div>
   <router-outlet></router-outlet>
 </ng-container>
