--- a/src/app/modules/notices/create-notice/create-notice.component.html
+++ b/src/app/modules/notices/create-notice/create-notice.component.html
@@ -13,7 +13,6 @@
             >
               <mat-icon
                 class="heading-icon mr-2"
-                style="font-size: 30px; margin-bottom: 0.4rem"
                 >newspaper</mat-icon
               >
               &nbsp; Create Notice
@@ -84,7 +83,7 @@
               class="m-2"
               mat-raised-button
               color="primary"
-              [disabled]="noticeFormGroup.invalid || (noticeFormGroup.pristine)"
+              [disabled]="noticeFormGroup.invalid || noticeFormGroup.pristine"
             >
              Save
             </button>
