feat: Create module of assets

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,10 @@
     <button mat-flat-button (click)="viewNotice()">View Notice</button>
     <button mat-flat-button (click)="addArticle()">Add Article</button>
     <button mat-flat-button (click)="viewArticle()">View Article</button>
+    <button mat-flat-button (click)="addNotification()">Add Notification</button>
+    <button mat-flat-button (click)="viewNotification()">View Notification</button>
+    <button mat-flat-button (click)="addAssets()">Add Assets</button>
+    <button mat-flat-button (click)="viewAssets()">View Assets</button>
   </div>
   <router-outlet></router-outlet>
 </ng-container>
