--- a/src/app/modules/assets/view-assets/view-assets.component.html
+++ b/src/app/modules/assets/view-assets/view-assets.component.html
@@ -15,11 +15,8 @@
     </div>
   </div>
   <!--******************************Table area**************************************-->
-  <div
-    class="row tableSection d-flex justify-content-center"
-    style="background-color: red"
-  >
-    <div class="table" style="background-color: green">
+  <div class="row tableSection d-flex justify-content-center">
+    <div class="table">
       <table
         mat-table
         [dataSource]="assetsList"
@@ -70,9 +67,12 @@
   </div>
   <!--******************************Pagination area**************************************-->
 
-  <div class="row paginationArea d-flex justify-content-end">
-    <div class="pagination">
-      <h1>pagination</h1>
+  <div>
+    <div class="row paginationArea d-flex justify-content-end">
+      <mat-paginator
+        [pageSizeOptions]="[10, 25, 100]"
+        aria-label="Select page of users"
+      ></mat-paginator>
     </div>
   </div>
 </div>
