--- a/src/app/modules/product/create-product/create-product.component.html
+++ b/src/app/modules/product/create-product/create-product.component.html
@@ -61,16 +61,36 @@
           </mat-form-field>
         </div>
 
-        <div class="row">
+        <div class="row mx-2 mb-2">
           <!-- Image URL -->
-          <mat-form-field>
-            <mat-label>Image URL</mat-label>
-            <input matInput formControlName="imageUrl" />
-            <mat-error> Image required</mat-error>
-          </mat-form-field>
+          <ngx-dropzone
+            style="
+              background: none;
+              color: unset;
+              border: 2px dashed;
+              height: 100%;
+            "
+            (change)="onUpload($event)"
+            color="black"
+            [multiple]="false"
+          >
+            <ngx-dropzone-label>
+              <p><span class="material-icons"> upload </span></p>
+              <p><span> Upload Product Image </span></p>
+            </ngx-dropzone-label>
+
+            <ngx-dropzone-image-preview
+            ngProjectAs="ngx-dropzone-preview"
+            *ngFor="let file of files"
+            [file]="file"
+            [removable]="true"
+            (removed)="onRemove(file)"
+          >
+          </ngx-dropzone-image-preview>
+          </ngx-dropzone>
         </div>
 
-        <div class="row mb-2">
+        <div class="row my-2">
           <mat-radio-group
             formControlName="bodyArea"
             aria-label="Select Item Type"
@@ -207,11 +227,27 @@
           </div>
         </div>
 
-        <!-- Submit Button -->
         <div>
+          <button mat-raised-button color="accent" class="btn btn-primary" (click)="getBodyCategory()">
+            Get Body Category
+          </button>
+        </div>
+
+        <div class="row mt-4">
+          <!-- body category -->
+          <mat-form-field>
+            <mat-label>Body Category</mat-label>
+            <input matInput formControlName="bodyType" />
+            <mat-error> Body Category is required</mat-error>
+          </mat-form-field>
+        </div>
+
+        <!-- Submit Button -->
+        <div class="mt-3">
           <button
             mat-raised-button
             color="primary"
+            style="background-color: crimson; color: white"
             [disabled]="!this.productForm.valid"
             class="btn btn-primary"
           >
