--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,25 +1,104 @@
-<mat-card class="custom-login-card">
-    <mat-card-header class="custom-card-header">
-      <mat-card-title class="custom-card-title">Login</mat-card-title>
-    </mat-card-header>
-    <mat-card-content class="custom-card-content" style="margin-top: 15px;">
-      <form class="custom-example-form" [formGroup]="loginForm" (ngSubmit)="proceedLogin()">
-        <mat-form-field class="custom-example-full-width">
-          <mat-label>E-Mail</mat-label>
-          <input matInput formControlName="email">
-          <mat-error>E-mail is required</mat-error>
-        </mat-form-field>
-        <mat-form-field class="custom-example-full-width">
-          <mat-label>Password</mat-label>
-          <input matInput type="password" formControlName="password">
-          <mat-error>Password is required</mat-error>
-        </mat-form-field>
-  
-        <div class="custom-button-group">
-          <button (click)="goToRegister()" mat-raised-button style="background-color: #4c54f8; color: white;">New User ?</button>
-          <button mat-raised-button color="primary" [disabled]="!this.loginForm.valid">Login</button>
-        </div>
-      </form>
-    </mat-card-content>
+<div class="row d-md-flex justify-content-center mt-4 d-none">
+  <mat-card style="width: 50vw">
+    <div class="row d-flex justify-content-center align-items-center">
+      <div class="col-md-5 text-center">
+        <h1 class="logo-text">fitMate</h1>
+      </div>
+      <div class="col-md-7">
+        <mat-card class="custom-login-card">
+          <mat-card-header class="custom-card-header">
+            <mat-card-title class="custom-card-title">Login</mat-card-title>
+          </mat-card-header>
+          <mat-card-content
+            class="custom-card-content"
+            style="margin-top: 15px"
+          >
+            <form
+              class="custom-example-form"
+              [formGroup]="loginForm"
+              (ngSubmit)="proceedLogin()"
+            >
+              <mat-form-field class="custom-example-full-width">
+                <mat-label>E-Mail</mat-label>
+                <input matInput formControlName="email" />
+                <mat-error>E-mail is required</mat-error>
+              </mat-form-field>
+              <mat-form-field class="custom-example-full-width">
+                <mat-label>Password</mat-label>
+                <input matInput type="password" formControlName="password" />
+                <mat-error>Password is required</mat-error>
+              </mat-form-field>
+
+              <div class="custom-button-group">
+                <button
+                  (click)="goToRegister()"
+                  mat-raised-button
+                  style="background-color: #4c54f8; color: white"
+                >
+                  New User ?
+                </button>
+                <button
+                  mat-raised-button
+                  color="primary"
+                  style="background-color: crimson; color: white"
+                  [disabled]="!this.loginForm.valid"
+                >
+                  Login
+                </button>
+              </div>
+            </form>
+          </mat-card-content>
+        </mat-card>
+      </div>
+    </div>
   </mat-card>
+</div>
+
+<div class="row d-md-none">
+  <div class="d-md-none">
+    <mat-card class="custom-login-card">
+      <mat-card-header class="custom-card-header">
+        <mat-card-title class="custom-card-title">Login</mat-card-title>
+      </mat-card-header>
+      <mat-card-content
+        class="custom-card-content"
+        style="margin-top: 15px"
+      >
+        <form
+          class="custom-example-form"
+          [formGroup]="loginForm"
+          (ngSubmit)="proceedLogin()"
+        >
+          <mat-form-field class="custom-example-full-width">
+            <mat-label>E-Mail</mat-label>
+            <input matInput formControlName="email" />
+            <mat-error>E-mail is required</mat-error>
+          </mat-form-field>
+          <mat-form-field class="custom-example-full-width">
+            <mat-label>Password</mat-label>
+            <input matInput type="password" formControlName="password" />
+            <mat-error>Password is required</mat-error>
+          </mat-form-field>
   
+          <div class="custom-button-group">
+            <button
+              (click)="goToRegister()"
+              mat-raised-button
+              style="background-color: #4c54f8; color: white"
+            >
+              New User ?
+            </button>
+            <button
+              mat-raised-button
+              color="primary"
+              style="background-color: crimson; color: white"
+              [disabled]="!this.loginForm.valid"
+            >
+              Login
+            </button>
+          </div>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
