--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer-bottom">
-    <p>&copy; 2024 E-Commerce System. All rights reserved.</p>
+    <p>&copy; fitMate. All rights reserved.</p>
   </div>
