--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -5,8 +5,8 @@ ul li {
 /* Add this style in your component's SCSS file (e.g., app-header.component.scss) */
 .mat-toolbar {
   height: 50px; /* Adjust the height based on your preference */
-  background-color: #3498db; /* Change the background color */
-  color: white; /* Change the text color */
+ // background-color: #3498db; /* Change the background color */
+  color: rgb(8, 0, 0); /* Change the text color */
 }
 
 .mat-toolbar-row {
@@ -48,4 +48,14 @@ li button.mat-icon-button {
 /* Optional: Add hover effect for buttons on the right */
 li button.mat-icon-button:hover {
   background-color: rgba(255, 255, 255, 0.1);
+}
+/* Add this style to your component's CSS or styles.scss file */
+mat-toolbar {
+  background-color: white;
+  color: black;
+}
+
+/* Set icon and font color */
+mat-icon, button, [mat-icon-button] {
+  color: black;
 }
