--- a/src/app/pages/sidebar/sidebar.component.scss
+++ b/src/app/pages/sidebar/sidebar.component.scss
@@ -19,3 +19,13 @@
     background: rgba(255, 255, 255, 0.2);
     color: #3498db;
   }
+
+  /* Add this style to your component's CSS or styles.scss file */
+.custom-font {
+  font-size: 20px;
+  font-weight: bold;
+  color: #dc143c;
+  text-align: center;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
+}
